# Jeff

./: .gitignore  CHANGELOG.md  README.md  launch.bat  ollama-jeff.bat  pyproject.toml  setup.ps1
.omm/: config.yaml
.omm/blood-kernel/: description.md  diagram.mmd
.omm/guard-security/: description.md  diagram.mmd
.omm/hand-routing/: description.md  diagram.mmd
.omm/jeff-organism/: context.md  description.md  diagram.mmd
.omm/mind-intelligence/: diagram.mmd
.omm/pantry-models/: diagram.mmd
.omm/sense-knowledge/: diagram.mmd
.omm/skin-interface/: diagram.mmd
.omm/staff-agents/: description.md  diagram.mmd
.omm/workplay-mvp/: description.md  diagram.mmd
docs/: 20-GRIPES.md  ARCHITECTURE.md  BLOOD.md  MCP.md  MEMORY.md  PHI.md  POLYMARKET.md  SYCOPHANCY.md  WORKPLAY-v1.0.0.md
jeff/: __init__.py  arcade.py  cli.py  config.example.py  config.py  diner.py
jeff/bell/: __init__.py
jeff/blood/: __init__.py  provenance.py
jeff/bone/: __init__.py  memory.py
jeff/gate/: __init__.py
jeff/guard/: __init__.py  basin.py  enforcer.py  firewall.py  sandbox.py  umph.py
jeff/hand/: __init__.py  batch.py  forge.py  pulse.py
jeff/mind/: __init__.py  coherence.py  deadends.py  evolve.py  instincts.py  learn.py
jeff/nerve/: __init__.py
jeff/pantry/: __init__.py  cluster.py  diet.py  vitals.py
jeff/personality/: __init__.py
jeff/sense/: __init__.py  (+3 more)
tests/: test_bell.py  test_coherence.py  test_gate.py  test_guard.py  test_instincts.py  test_learn.py  test_market.py  test_mcp.py  test_memory.py  test_personality.py  test_provenance.py  test_umph.py
(+12 files in other folders)
