[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jeff-code"
version = "1.0.0"
description = "My name Jeff. I handle it."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AnnulusLabs LLC" }]
keywords = ["coding-agent", "cli", "local-first", "abliterated", "agentic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "mcp>=1.25",
]

[project.optional-dependencies]
voice = ["piper-tts>=1.4"]
workplay = ["fastapi>=0.115", "uvicorn>=0.30"]
dev = ["pytest", "ruff"]

[project.scripts]
jeff = "jeff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["jeff"]

[tool.ruff]
line-length = 100
target-version = "py311"
